gcc/testsuite/rust/rustc/ui/parser/extern-no-fn_dg.rs
extern "C" {
    f();
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

fn main() {
}

